Fix education img on mobile

--- a/src/static/css/Education.css
+++ b/src/static/css/Education.css
@@ -95,6 +95,7 @@
   .school-name-mobile {
     font-size: 1.8em;
     font-weight: 700;
+    margin-left: 0.8em;
   }
 
   .school-name {
@@ -120,7 +121,6 @@
     width: 4rem !important;
     height: 4rem !important;
     border-radius: 50%;
-    margin-right: 1em;
   }
 
   .education-card-right {
